fix(availability): remove duplicate function
